# argus_eyes

./: .gitignore  Makefile  docker-compose.yml  manage.py  pyproject.toml
argus_eyes/: asgi.py  settings.py  urls.py  wsgi.py
projector/: admin.py  forms.py  models.py  urls.py  views.py
projector/camera/commands/: __init__.py  camera_create.py  camera_update.py
projector/feed/: feed_generator.py
projector/migrations/: 0001_initial.py  0002_camera_suffix.py  0003_alter_camera_ip_address.py
projector/templates/projector/: base.html
projector/templates/projector/camera/: camera_create.html  camera_delete.html  camera_edit.html  camera_feed.html  camera_list.html
