[tool.poetry]
name = "argus-eyes"
version = "0.1.0"
description = ""
authors = ["Wojciech Batorski <wojbat4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.6"
requests = "^2.34.2"
opencv-python = "^4.13.0.92"
imutils = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
